[tool.poetry]
name = "pyinvasion"
version = "0.1.0"
description = "PyGame Alien Invasion Game"
authors = ["rootshellz <rootshellz@rootshellz.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
bpython = "^0.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
